[package]
name = "tux-control"
version = "0.1.0"
authors = ["Sébastien Viande <sviande@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.1"

[[bin]]
name = "tux-control"
path = "main.rs"

[profile.release]
lto = true
